--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,8 +1,10 @@
 <h1>Créditos</h1>
 
 <p>
-    Esta práctica ha sido desarrollada por LeChuck.
+    Esta práctica ha sido desarrollada por David Santos González y Alberto Jaramillo Serrano.
 </p>
+<a href="https://github.com/helminster32/quiz_2017">Repositorio quiz_2017</a>
+<img src="/images/david.jpg" />
+<img src="/images/alberto.jpg" />
 
-<img src="/images/lechuck.jpg" />
 
