--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Preguntas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel="icon" href="favicon2.ico" type="image/x-icon" />
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel='stylesheet'
           type='text/css'
           media='only screen and (min-width: 800px) and (min-device-width: 600px)'
@@ -63,8 +63,11 @@
         </article>
         <% } %>
 
-
         <%- body %>
+
+        <% if (locals.paginate_control) { %>
+        <%- paginate_control %>
+        <% } %>
     </section>
 
     <footer class="main" id="mainFooter">
