--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <title>Preguntas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <link rel="icon" href="favicon2.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon2.ico" type="image/x-icon"/>
     <link rel='stylesheet'
           type='text/css'
           media='only screen and (min-width: 800px) and (min-device-width: 600px)'
@@ -24,6 +24,7 @@
     <nav class="main" id="mainNav" role="navigation">
         <a href="/">Inicio</a>
         <a href="/quizzes">Preguntas</a>
+	<a href="/quizzes/randomplay">Jugar</a>
         <a href="/author">Créditos</a>
         <a href="/help">Ayuda</a>
     </nav>
