--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -1,31 +1,41 @@
 
-
 <ul>
     <% for (var i in tips) { %>
         <% var tip = tips[i]; %>
 
-        <li>
+        <% var accepted = tip.accepted; %>
+        <% var isAdmin = session.user && session.user.isAdmin; %>
+        <% var isQuizAuthor = session.user && quizAuthorId && quizAuthorId === session.user.id; %>
 
-            <% if (tip.accepted ||
-                    (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
+        <% if (accepted || isAdmin || isQuizAuthor) { %>
 
-                <%= tip.text %>
+            <li>
+                <%= tip.text; %>
+		
+                    ---> Pista generada por:
+                                <span id="autor"> 
+                                <%= tip.Author.username %>
+                                </span>
 
-            <% } %>
+                  
 
-            <% if (!tip.accepted &&
-                    (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
+                <% if (!accepted && (isAdmin || isQuizAuthor)) { %>
 
-                <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/accept?_method=PUT"><button>Aceptar</button></a>
+                      <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/accept?_method=PUT">
+                          <button>Aceptar</button>
+                      </a>
 
-            <% } %>
+                <% } %>
 
-            <% if ((session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
+                <% if (isAdmin || isQuizAuthor) { %>
 
-                <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE"><button>Borrar</button></a>
+                      <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE">
+                           <button>Borrar</button>
+                      </a>
 
-            <% } %>
+                <% } %>
+             </li>
+         <% } %>
 
-        </li>
     <% } %>
 </ul>
