--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -12,7 +12,7 @@
             <li>
                 <%= tip.text; %>
 		
-                    ---> Pista generada por:
+                     Pista generada por:
                                 <span id="autor"> 
                                 <%= tip.Author.username %>
                                 </span>
