Cambio final definitivo

--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -6,6 +6,7 @@
         <% var accepted = tip.accepted; %>
         <% var isAdmin = session.user && session.user.isAdmin; %>
         <% var isQuizAuthor = session.user && quizAuthorId && quizAuthorId === session.user.id; %>
+	<% var isTipAuthor = session.user && tip.Author.username && tip.Author.username === session.user.username; %>
 
         <% if (accepted || isAdmin || isQuizAuthor) { %>
 
@@ -27,7 +28,7 @@
 
                 <% } %>
 
-                <% if (isAdmin || isQuizAuthor) { %>
+                <% if (isAdmin || isQuizAuthor || isTipAuthor) { %>
 
                       <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE">
                            <button>Borrar</button>
