--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -8,7 +8,7 @@
         <% var isQuizAuthor = session.user && quizAuthorId && quizAuthorId === session.user.id; %>
 	<% var isTipAuthor = session.user && tip.Author.username && tip.Author.username === session.user.username; %>
 
-        <% if (accepted || isAdmin || isQuizAuthor) { %>
+        <% if (accepted || isAdmin || isQuizAuthor || isTipAuthor) { %>
 
             <li>
                 <%= tip.text; %>
